@@ -1,0 +1,5 @@
+# WBEM-SMT configuration file for common functionality
+
+# Path to the WBEM-SMT WebApplication (Task Launcher)
+WBEMSMT_WEBAPP_HOME="/var/lib/sblim-wbemsmt-webapp/webapps/sblim-wbemsmt-webapp"
+
